--- a/BasicCalculator/BasicCalculator/Base.lproj/Main.storyboard
+++ b/BasicCalculator/BasicCalculator/Base.lproj/Main.storyboard
@@ -261,6 +261,7 @@
                     </view>
                     <connections>
                         <outlet property="btnAdd" destination="1cX-zY-rgr" id="yBf-ze-IsW"/>
+                        <outlet property="btnClear" destination="7WS-KG-uF5" id="vcY-V2-5h4"/>
                         <outlet property="btnDivide" destination="MUc-eu-8KK" id="ctF-q2-hum"/>
                         <outlet property="btnMultiply" destination="kti-Mv-HUc" id="JBs-aG-3e2"/>
                         <outlet property="btnSubtract" destination="u6M-lY-ctZ" id="XSi-WI-qQ3"/>
