--- a/BasicCalculator/BasicCalculator/Base.lproj/Main.storyboard
+++ b/BasicCalculator/BasicCalculator/Base.lproj/Main.storyboard
@@ -231,9 +231,12 @@
                                     <action selector="functionButtons:" destination="BYZ-38-t0r" eventType="touchUpInside" id="odj-MF-fFN"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="I8p-PM-Ym1">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="I8p-PM-Ym1">
                                 <rect key="frame" x="16" y="47" width="343" height="208"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="208" id="Vnk-AJ-Kxj"/>
+                                    <constraint firstAttribute="width" constant="343" id="ZA8-eg-UPU"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="70"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -315,6 +318,28 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="LOM-lb-I2U" firstAttribute="top" secondItem="I8p-PM-Ym1" secondAttribute="bottom" constant="332" id="1I0-YM-lRq"/>
+                            <constraint firstItem="u6M-lY-ctZ" firstAttribute="top" secondItem="I8p-PM-Ym1" secondAttribute="bottom" constant="170" id="3aB-jQ-kyy"/>
+                            <constraint firstItem="MUc-eu-8KK" firstAttribute="top" secondItem="I8p-PM-Ym1" secondAttribute="bottom" constant="8" id="7r0-Sc-meV"/>
+                            <constraint firstItem="1cX-zY-rgr" firstAttribute="top" secondItem="I8p-PM-Ym1" secondAttribute="bottom" constant="251" id="Ho0-tq-tkJ"/>
+                            <constraint firstItem="7WS-KG-uF5" firstAttribute="top" secondItem="I8p-PM-Ym1" secondAttribute="bottom" constant="8" id="Jel-Lk-HdP"/>
+                            <constraint firstItem="O9R-DK-wlG" firstAttribute="top" secondItem="I8p-PM-Ym1" secondAttribute="bottom" constant="251" id="K9V-gB-GBe"/>
+                            <constraint firstItem="nnU-2z-D6v" firstAttribute="top" secondItem="I8p-PM-Ym1" secondAttribute="bottom" constant="170" id="NGX-uZ-UKV"/>
+                            <constraint firstItem="rq8-Cc-Jfa" firstAttribute="top" secondItem="I8p-PM-Ym1" secondAttribute="bottom" constant="8" id="QBG-Fl-2ha"/>
+                            <constraint firstItem="I8p-PM-Ym1" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="27" id="UjR-Mr-Nqv"/>
+                            <constraint firstItem="hJN-gi-Pwa" firstAttribute="top" secondItem="I8p-PM-Ym1" secondAttribute="bottom" constant="251" id="V4t-UR-eDT"/>
+                            <constraint firstItem="y28-gM-ZAR" firstAttribute="top" secondItem="I8p-PM-Ym1" secondAttribute="bottom" constant="251" id="VaC-QT-kkA"/>
+                            <constraint firstItem="jN9-2e-kog" firstAttribute="top" secondItem="I8p-PM-Ym1" secondAttribute="bottom" constant="89" id="Vbp-71-Qtk"/>
+                            <constraint firstItem="a0c-vf-349" firstAttribute="top" secondItem="I8p-PM-Ym1" secondAttribute="bottom" constant="89" id="bIN-yZ-RcN"/>
+                            <constraint firstItem="KXz-C8-waq" firstAttribute="top" secondItem="I8p-PM-Ym1" secondAttribute="bottom" constant="89" id="bv6-5g-IjS"/>
+                            <constraint firstItem="aAa-cy-Vzg" firstAttribute="top" secondItem="I8p-PM-Ym1" secondAttribute="bottom" constant="170" id="e27-H6-QHX"/>
+                            <constraint firstItem="QzH-ln-JJ9" firstAttribute="top" secondItem="I8p-PM-Ym1" secondAttribute="bottom" constant="170" id="fT6-r1-W10"/>
+                            <constraint firstItem="vtl-5S-URp" firstAttribute="top" secondItem="I8p-PM-Ym1" secondAttribute="bottom" constant="332" id="kVH-z1-ekC"/>
+                            <constraint firstItem="gxb-hv-4X6" firstAttribute="top" secondItem="I8p-PM-Ym1" secondAttribute="bottom" constant="8" id="lKH-uw-qGm"/>
+                            <constraint firstItem="kti-Mv-HUc" firstAttribute="top" secondItem="I8p-PM-Ym1" secondAttribute="bottom" constant="89" id="oMW-l0-qBc"/>
+                            <constraint firstItem="r75-SL-0sd" firstAttribute="top" secondItem="I8p-PM-Ym1" secondAttribute="bottom" constant="332" id="xPA-EH-Z2Q"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="btnAdd" destination="1cX-zY-rgr" id="yBf-ze-IsW"/>
